# cosmosdb-agent-kit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  apm.yml  gemini-extension.json  package-lock.json  package.json  plugin.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: aggregate-batch.yaml  create-batch-children.yaml  release.yml  test-iteration.yaml
docs/: index.html  styles.css
evals/cosmosdb-best-practices/: eval.yaml
scripts/: compile.js  validate.js  version.js
skills/cosmosdb-best-practices/: AGENTS.md  README.md
skills/cosmosdb-data-modeling/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/cosmosdb-design-patterns/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/cosmosdb-full-text-search/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/cosmosdb-global-distribution/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/cosmosdb-indexing/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/cosmosdb-monitoring/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/cosmosdb-partition-key/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/cosmosdb-query-optimization/: AGENTS.md  README.md  (+2 more)
testing-v2/scenarios/ecommerce-order-api/iterations/iteration-001-rust/: Cargo.toml  ITERATION.md  _start-app.cmd  build-signal.json  iteration-config.yaml
testing-v2/scenarios/ecommerce-order-api/iterations/iteration-001-rust/src/: cosmos.rs  handlers.rs  main.rs  models.rs
(+49 files in other folders)
